# fastapi-react-ai-template

./: .gitignore  README.md  SPEC.md  TESTING.md  WHY.md  copier.yml  test-answers.yml  test-template.sh
.github/workflows/: test-template.yml
forge/: forge_plan.py  forge_run.py
forge/changes/0000-add-auth/: decisions.md  spec.md  state.json  tasks.md
forge/global/: constraints.md  verification.md
template/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  docker-compose.yml  justfile  package.json
template/.github/workflows/: ci.yml
template/apps/backend/: AGENTS.md  Dockerfile  alembic.ini  conftest.py  pyproject.toml
template/apps/backend/alembic/: env.py
template/apps/backend/alembic/versions/: 001_create_items_table.py  001_create_tables.py
template/apps/backend/app/: admin.py  auth.py  config.py  database.py  exceptions.py  logging.py  main.py  seed.py
template/apps/backend/app/api/: auth.py  deps.py  health.py  items.py
template/apps/backend/app/models/: item.py  user.py
template/apps/backend/app/repositories/: item.py  user.py
template/apps/backend/app/schemas/: item.py  user.py
template/apps/backend/app/services/: auth.py  item.py
template/apps/backend/tests/: conftest.py  test_admin.py  test_auth.py  test_contract.py  test_health.py  test_items.py  test_routes_direct.py  test_services.py  test_utils.py
template/apps/frontend/: AGENTS.md  Dockerfile  components.json  next.config.js  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
template/apps/frontend/tests/: items.test.tsx
template/forge/: AGENTS.md  CLAUDE.md  FORGE.md  PLAN_PROMPT.md  agent_runner.py  forge_approve.py  forge_new.py  forge_plan.py  forge_run.py
template/forge/global/: architecture.md  constraints.md
template/forge/scripts/: README.md  generate_vault.py
(+15 files in other folders)
