[project]
name = "{{ project_slug }}-backend"
version = "0.1.0"
requires-python = ">={{ python_version }}"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<5.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "sqladmin>=0.19",
    "itsdangerous>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

{% raw %}
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "app/seed.py"]

[tool.coverage.report]
show_missing = true
{% endraw %}
